in about added list of fully covered sections; fixed when catching question by code to get shuffled answers;

--- a/css/index.css
+++ b/css/index.css
@@ -219,3 +219,7 @@ button {
     display: inline-block;
     min-width: 172px;
 }
+
+#added_sections{
+    border: solid 1px #A7A7A7;
+}
